Crud office done

--- a/CRUD By Anwer Mehmood/appsettings.json
+++ b/CRUD By Anwer Mehmood/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectString": "Server=DESKTOP-3VC7A0R; Database=EmployeeDB; Integrated Security=True"
+    "ConnectString": "Server=(localdb)\\MSSQLLocalDB; Database=EmployeeDB; Integrated Security=True"
   }
 }
